# cpp_project_template

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/TestApp/: test.h
src/: CMakeLists.txt  test.cpp  test.h
src/model/: test1.cpp  test1.h
test/: CMakeLists.txt  build.sh  main.cpp
